Init for multiple EPG device notifying raw data to viewmodel